version/0.9/_sources/examples/02-tbrom_examples/index.rst.txt


.. _sphx_glr_examples_02-tbrom_examples:

TBROM evaluation examples
=========================
These examples show how to use PyTwin to evaluate field results from TBROM included in a TWIN file.
Multiple workflows are demonstrated such as image and field data generation (with possible processing of data to other
Ansys tools like Fluent or Mechanical), TBROM evaluation with input field parameterization, output field visualization
for detailed post processing (including projection on CFD/FEA meshes).



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how PyTwin can be used to load and evaluate a twin model to visualize ROM results in the form of images with predefined views. The script takes the inputs to evaluate the TBROM (twin builder ROM) and displays the corresponding image. A first image is generated using the point cloud-based ROM Viewer embedded in the twin runtime. The second image is generated by loading the ROM results and postprocessing the CFD mesh using PyFluent. Finally, ROM results are postprocessed in the 3D viewer enabled by PyFluent. For more information, see the PyFluent-Visualization documentation.">

.. only:: html

  .. image:: /examples/02-tbrom_examples/images/thumb/sphx_glr_00-TBROM_images_thumb.png
    :alt:

  :ref:`sphx_glr_examples_02-tbrom_examples_00-TBROM_images.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">3D field ROM example for images generation</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how PyTwin can be used to load and evaluate a twin model to predict CFD results in the form of temperature fields. Temperature fields are used as inputs for an FEA thermal structural analysis of a T-junction that considers the mixing of two different flow temperatures. The example uses PyTwin to evaluate the twin results and convert them to an appropriate format. It then uses PyMAPDL to load the FEA model, apply the temperature loads coming from the twin, and perform the thermal structural analysis.">

.. only:: html

  .. image:: /examples/02-tbrom_examples/images/thumb/sphx_glr_01-TBROM_dataTransfer_pyMAPDL_thumb.png
    :alt:

  :ref:`sphx_glr_examples_02-tbrom_examples_01-TBROM_dataTransfer_pyMAPDL.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Twin evaluation of a 3D field ROM and data transfer to FEA model inputs</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how to use PyTwin to load and evaluate a twin model that has a field ROM with inputs parameterized by both scalar and field data. The example also shows how to evaluate the output field data in the form of snapshots.">

.. only:: html

  .. image:: /examples/02-tbrom_examples/images/thumb/sphx_glr_02-TBROM_input_field_thumb.png
    :alt:

  :ref:`sphx_glr_examples_02-tbrom_examples_02-TBROM_input_field.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">3D field ROM example for input field snapshot projection and snapshot generation on demand</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how the example given in ref_example_TBROM_inputField can be modified to take inputs as Numpy arrays, rather than reading from disk. Similarly, outputs are produced as Numpy arrays.">

.. only:: html

  .. image:: /examples/02-tbrom_examples/images/thumb/sphx_glr_03-TBROM_input_numpy_field_thumb.png
    :alt:

  :ref:`sphx_glr_examples_02-tbrom_examples_03-TBROM_input_numpy_field.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">3D field ROM example for field snapshot input and output as Numpy array</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how PyTwin can be used to load and evaluate a twin model, and visualize the ROM results on a CFD mesh. Once the twin model is evaluated, PyDPF is used to read in the CFD mesh on which the ROM results will be projected. PyVista is then used to perform the 3D visualization with different options. For more information, see the PyDPF documentation and PyVista documentation.">

.. only:: html

  .. image:: /examples/02-tbrom_examples/images/thumb/sphx_glr_04-TBROM_CFD_mesh_based_visualization_thumb.png
    :alt:

  :ref:`sphx_glr_examples_02-tbrom_examples_04-TBROM_CFD_mesh_based_visualization.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">3D field ROM example with CFD mesh based visualization</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how PyTwin can be used to load and evaluate a twin model, and visualize the ROM results on a FEA mesh. Once the twin model is evaluated, PyDPF is used to read in the FEA mesh on which the ROM results will be projected. PyVista is then used to perform the 3D visualization with different options. For more information, see the PyDPF documentation and PyVista documentation.">

.. only:: html

  .. image:: /examples/02-tbrom_examples/images/thumb/sphx_glr_05-TBROM_FEA_mesh_based_visualization_thumb.png
    :alt:

  :ref:`sphx_glr_examples_02-tbrom_examples_05-TBROM_FEA_mesh_based_visualization.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">3D field ROM example with FEA mesh based visualization</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how PyTwin can be used to perform different types of static structural analysis using 3D field ROM. A static structural model of a dog bone is created with Ansys Mechanical. A fixed support is applied on the right hand side, while a remote force is supplied on the left hand side. A non-linear structural analysis with plastic material behavior (using steel) is performed to compute the resulting stress field and associated displacement. A static ROM has been generated out of the original 3D model, so that the resulting Twin model can be evaluated using PyTwin, giving the possibilities to evaluate multiple configurations and operating conditions quickly, while keeping predictions accuracy similar to original 3D FEA model. The PyTwin worklow illustrates different APIs usage to evaluate the models at different conditions, visualize 3D detailed field results, as well as performing optimization and inverse problems.">

.. only:: html

  .. image:: /examples/02-tbrom_examples/images/thumb/sphx_glr_06-TBROM_FEA_static_structural_optimization_thumb.png
    :alt:

  :ref:`sphx_glr_examples_02-tbrom_examples_06-TBROM_FEA_static_structural_optimization.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Static structural analysis and optimization using 3D field ROM</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /examples/02-tbrom_examples/00-TBROM_images
   /examples/02-tbrom_examples/01-TBROM_dataTransfer_pyMAPDL
   /examples/02-tbrom_examples/02-TBROM_input_field
   /examples/02-tbrom_examples/03-TBROM_input_numpy_field
   /examples/02-tbrom_examples/04-TBROM_CFD_mesh_based_visualization
   /examples/02-tbrom_examples/05-TBROM_FEA_mesh_based_visualization
   /examples/02-tbrom_examples/06-TBROM_FEA_static_structural_optimization

